# aiir

./: README.md
serwer/aiir/: db.sqlite3  manage.py
serwer/aiir/aiir/: settings.py  urls.py  wsgi.py
serwer/aiir/aiir_app/: admin.py  detail.html  forms.py  models.py  urls.py  views.py
serwer/aiir/aiir_app/migrations/: 0001_initial.py  0002_query_request_time.py  0003_auto_20150512_1331.py  0004_auto_20150512_1346.py  0005_auto_20150512_1403.py  0006_auto_20150512_1408.py  0007_auto_20150512_1411.py  0008_auto_20150512_1415.py  0009_auto_20150512_1417.py  0010_auto_20150512_1429.py  0011_user.py  0012_auto_20150513_0935.py  0013_auto_20150516_1507.py  0014_user.py  0016_pending_user.py
serwer/aiir/aiir_app/templates/: index.html  tasks.html
serwer/aiir/aiir_app/templates/aiir_app/: login.html  register.html  tasks.html
serwer/serwer/aiir/: db.sqlite3
serwer/serwer/aiir/aiir_app/: admin.py
serwer/serwer/aiir/aiir_app/migrations/: 0015_auto_20150516_1631.py
slave/: CMakeLists.txt  IbcastExtensionForBoostMPI.hpp  Worker.cpp  Worker.hpp  main.cpp
